added fasta directory path

--- a/config.ini
+++ b/config.ini
@@ -11,3 +11,6 @@ varsplic_path: /Users/pramotepm/Desktop/mRNA/uniprot/release/2016_07_06/uniprot_
 
 [refseq]
 protein_seq_path: /Users/pramotepm/Desktop/mRNA/refseq/NCBI/protein/2016_07_12/all_human.protein.gpff
+
+[output]
+fasta_dir_path: /Users/pramotepm/Desktop/mRNA/test/fasta
